src/objects/PlaneURL__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>URLs for Integration to the Plane Partners</description>
    <fields>
        <fullName>Digital_Annually_ID__c</fullName>
        <label>Digital Annually ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Monthly_ID__c</fullName>
        <label>Digital Monthly ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Frames__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Frames</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <description>Login to access the partner</description>
        <label>Login</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password to access the partner</description>
        <label>Password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Continuous_ID__c</fullName>
        <label>Premium Continuous ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>baseURL__c</fullName>
        <label>baseURL</label>
        <type>Url</type>
    </fields>
    <label>PlaneURL</label>
</CustomObject>